--- a/ORTPro/Views/Profesionales/Perfil.cshtml
+++ b/ORTPro/Views/Profesionales/Perfil.cshtml
@@ -29,7 +29,7 @@
                 <!-- Breadcrumb -->
                 <nav aria-label="breadcrumb" class="main-breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+                        <li class="breadcrumb-item"><a class="back" href="/">Inicio</a></li>
                         <li class="breadcrumb-item active" aria-current="page">
                             Perfil de profesional
                         </li>
